--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.6",
+    "expo-cli": "^6.0.5",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "^0.16.1",
     "expo-status-bar": "~1.4.0",
