--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "firebase": "9.6.11",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
