--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.6",
-    "expo-cli": "^6.0.5",
+    "expo-cli": "^6.0.6",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "9.6.11",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.4",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.4",
+    "react-native-paystack-webview": "^4.0.3",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
